--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,133 @@
-.App {
-  text-align: center;
+
+.header-color {
+  background: #74ebd5;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.landing-grid {
+  background-image: url("https://i0.wp.com/dustinmeyer.com/wp-content/uploads/2014/12/Austin-Zilker-Christmas-Tree-Skyline-Downtown-DMP.jpg?fit=1800%2C1200");
+text-align: center;
+position: static;
+top: 10;
+left: 0;
+width: 100%;
+height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.about-me-grid {
+background-image: url("https://blog.appspace.com/wp-content/uploads/2018/02/dallas-cover.jpg");
+text-align: center;
+position: static;
+top: 10;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+.avatar-img {
+  height: 300px;
+  width: 300px;
+
+  border-radius: 2%;
+  vertical-align: middle;
+}
+
+.banner-text {
+  background-color: black;
+  opacity: .8;
+  width: 85%;
+  height: 90%;
+  margin: auto;
+  border-radius: 10px;
+  margin-bottom: 20%;
+}
+
+.banner-text h1 {
+  font-size: 66px;
+  font-height: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-text hr {
+  border-top: 5px dotted white;
+  width: 50%;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.banner-text p {
+  color: white;
+  font-size: 20px;
+  padding: 1em;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+  margin-bottom: 10%;
+}
+
+.social-links i {
+  color: white;
+  font-size: 5em;
+  padding: 8px;
+}
+
+.projects-grid {
+  
+}
+
+.contact-body {
+  margin: auto;
+  
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background: white;
+  color: black;
+  
+  margin-bottom: 20px;
+}
+
+.contact-grid h2 {
+  font-family: 'Anton', sans-serif;
+}
+
+.contact-grid p {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+}
+
+.contact-grid hr {
+  border-top: 5px dotted black;
+  width: 50%;
+  margin: auto;
+}
+
+.about-right-col {
+  background: #F5F5F5;
+  color: black;
+}
+
+.about-left-col {
+  background-color: black;
+}
+
+.contact-list i {
+  font-size: 66px;
+  padding-right: 5rem;
 }
